# ig_backend

./: .gitignore  README.md  ecosystem.config.js  pyproject.toml
src/: app.py  settings.py
src/api/: __init__.py  instagram.py
src/api/alice_ml/: __init__.py
src/api/instagram/: __init__.py  auth.py  comment.py  info.py  media.py
src/api/openai/: __init__.py
src/db/: __init__.py  auth.py  comment.py  media.py
src/models/: alice_ml.py  auth.py  comment.py  common.py  info.py  media.py
src/router/: __init__.py  auth.py  comment.py  info.py  media.py
src/routers/: __init__.py  auth.py  info.py  media.py
src/routers/comment/: __init__.py  emotional.py  motivational.py
src/services/: auth.py  comment.py  info.py  media.py
src/services/comment/: __init__.py  loyalty.py  reply.py
src/utils/: jwt.py  responses.py  tools.py
