[project]
name = "ig-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faker>=33.0.0",
    "fastapi>=0.115.5",
    "openai>=1.55.0",
    "pydantic-settings>=2.6.1",
    "pymysql>=1.1.1",
    "python-jose>=3.3.0",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.32.0",
]
